; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/freespace/extr_freespace.c_XLogRecordPageWithFreeSpace.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/freespace/extr_freespace.c_XLogRecordPageWithFreeSpace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FSM_FORKNUM = common dso_local global i32 0, align 4
@RBM_ZERO_ON_ERROR = common dso_local global i32 0, align 4
@BUFFER_LOCK_EXCLUSIVE = common dso_local global i32 0, align 4
@BLCKSZ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @XLogRecordPageWithFreeSpace(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @fsm_space_avail_to_cat(i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @fsm_get_location(i32 %15, i32* %9)
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @fsm_logical_to_physical(i32 %17)
  store i32 %18, i32* %10, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* @FSM_FORKNUM, align 4
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* @RBM_ZERO_ON_ERROR, align 4
  %23 = call i32 @XLogReadBufferExtended(i32 %19, i32 %20, i32 %21, i32 %22)
  store i32 %23, i32* %11, align 4
  %24 = load i32, i32* %11, align 4
  %25 = load i32, i32* @BUFFER_LOCK_EXCLUSIVE, align 4
  %26 = call i32 @LockBuffer(i32 %24, i32 %25)
  %27 = load i32, i32* %11, align 4
  %28 = call i32 @BufferGetPage(i32 %27)
  store i32 %28, i32* %12, align 4
  %29 = load i32, i32* %12, align 4
  %30 = call i64 @PageIsNew(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %3
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* @BLCKSZ, align 4
  %35 = call i32 @PageInit(i32 %33, i32 %34, i32 0)
  br label %36

36:                                               ; preds = %32, %3
  %37 = load i32, i32* %12, align 4
  %38 = load i32, i32* %9, align 4
  %39 = load i32, i32* %7, align 4
  %40 = call i64 @fsm_set_avail(i32 %37, i32 %38, i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %45

42:                                               ; preds = %36
  %43 = load i32, i32* %11, align 4
  %44 = call i32 @MarkBufferDirtyHint(i32 %43, i32 0)
  br label %45

45:                                               ; preds = %42, %36
  %46 = load i32, i32* %11, align 4
  %47 = call i32 @UnlockReleaseBuffer(i32 %46)
  ret void
}

declare dso_local i32 @fsm_space_avail_to_cat(i32) #1

declare dso_local i32 @fsm_get_location(i32, i32*) #1

declare dso_local i32 @fsm_logical_to_physical(i32) #1

declare dso_local i32 @XLogReadBufferExtended(i32, i32, i32, i32) #1

declare dso_local i32 @LockBuffer(i32, i32) #1

declare dso_local i32 @BufferGetPage(i32) #1

declare dso_local i64 @PageIsNew(i32) #1

declare dso_local i32 @PageInit(i32, i32, i32) #1

declare dso_local i64 @fsm_set_avail(i32, i32, i32) #1

declare dso_local i32 @MarkBufferDirtyHint(i32, i32) #1

declare dso_local i32 @UnlockReleaseBuffer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
